Fix issue 04053: Little Layout problem, when template import fails Dev Added styles for partial upload header division
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8274 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/admin/styles/default/adminstyle.css
+++ b/admin/styles/default/adminstyle.css
@@ -885,6 +885,14 @@ div.successheader{
     padding:2px;  
 }
 
+div.partialheader{
+    font-weight:bold;
+    color: #CC3300;
+    background-color: #FF9900;   
+    margin: 5px 0;
+    padding:2px;  
+}
+
 div.messagebox .warningheader {
     font-weight:bold;
     color:#ee0000;
